--- a/css/about.css
+++ b/css/about.css
@@ -12,4 +12,11 @@
 
 .text-todo {
    color: #1572A1;
+   text-decoration: underline;
+}
+
+.text-link a {
+   text-decoration: none;
+   color: #1572A1;
+   font-weight: bold;
 }
