--- a/css/about.css
+++ b/css/about.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;800&display=swap');
+
 /* Tentang Kami */
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   text-transform: capitalize;
+   font-family: 'Inter', sans-serif;
 }
 .text-about {
    text-align: center;
