--- a/css/todo.css
+++ b/css/todo.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;800&display=swap');
+
 * {
    margin: 0;
    padding: 0;
@@ -98,5 +100,5 @@
 }
 
 .text-tambah {
-   font-weight: 900;
+   font-weight: 800;
 }
